kubernetes/apps/default/moonraker/moonraker-deployment.yaml
# Source: mainsail/templates/moonraker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moonraker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: moonraker
      app.kubernetes.io/instance: mainsail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: moonraker
        app.kubernetes.io/instance: mainsail
    spec:
      securityContext: {}
      containers:
      - name: moonraker
        securityContext:
          capabilities:
            add:
            - SYS_NICE
          privileged: true
        image: "mkuf/moonraker:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 7125
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
        resources: {}
        volumeMounts:
        - mountPath: /opt/printer_data/run
          name: socket
        - mountPath: /opt/printer_data/mainsail-config
          name: mainsail-config
        - mountPath: /opt/printer_data/gcodes
          name: gcode-files
        - mountPath: /dev/serial/by-id/usb-Klipper_lpc1769_1CC00008A49869AF90E93E5EC12000F5-if00
          name: dev-3dprinter
        - name: printer-config
          mountPath: /opt/printer_data/config/printer.cfg
          subPath: printer.cfg
        - name: moonraker-config
          mountPath: /opt/printer_data/config/moonraker.conf
          subPath: moonraker.conf
      - name: klipper
        securityContext:
          capabilities:
            add:
            - SYS_NICE
          privileged: true
        image: "mkuf/moonraker:latest"
        imagePullPolicy: IfNotPresent
        resources: {}
        volumeMounts:
        - mountPath: /opt/printer_data/run
          name: socket
        - mountPath: /opt/printer_data/gcodes
          name: gcode-files
        - name: printer-config
          mountPath: /opt/printer_data/config/printer.cfg
          subPath: printer.cfg
        - name: moonraker-config
          mountPath: /opt/printer_data/config/moonraker.conf
          subPath: moonraker.conf
        - mountPath: /dev/serial/by-id/usb-Klipper_lpc1769_1CC00008A49869AF90E93E5EC12000F5-if00
          name: dev-3dprinter
      nodeSelector:
        kubernetes.io/hostname: slave2
      volumes:
      - name: printer-config
        configMap:
          name: printer-config
      - name: moonraker-config
        configMap:
          name: moonraker-config
      - name: socket
        emptyDir: {}
      - name: mainsail-config
        emptyDir: {}
      - name: gcode-files
        persistentVolumeClaim:
          claimName: gcode-files
      - name: dev-3dprinter
        hostPath:
          path: /dev/serial/by-id/usb-Klipper_lpc1769_1CC00008A49869AF90E93E5EC12000F5-if00
