kubernetes/apps/default/moonraker/mainsail-service.yaml
# Source: mainsail/templates/mainsail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainsail

spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: mainsail
    app.kubernetes.io/instance: mainsail
