kubernetes/apps/default/moonraker/moonraker-service.yaml
# Source: mainsail/templates/moonraker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moonraker

spec:
  type: ClusterIP
  ports:
  - port: 7125
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: moonraker
    app.kubernetes.io/instance: mainsail
